tables and start of customer

--- a/client/templates/tables/book_table.html
+++ b/client/templates/tables/book_table.html
@@ -1,4 +1,9 @@
 {% extends "index.html" %}
+{% block title %}Books{% endblock %}
+{% block handler %}
+
+{% endblock %}
+
 {% block table %}
 <table>
   <thead>
