--- a/client/templates/tables/currently_borrow_table.html
+++ b/client/templates/tables/currently_borrow_table.html
@@ -1,14 +1,13 @@
 {% extends "index.html" %}
-{% block title %}Staff{% endblock %}
+{% block title %}Borrows{% endblock %}
 {% block table %}
 <table>
   <thead>
     <tr>
-      <th>SID</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Phone Number</th>
-      <th>Email</th>
+      <th>ISBN</th>
+      <th>Title</th>
+      <th>Borrowed count</th>
+      <th>Earliest return</th>
     </tr>
   </thead>
   <tbody>
@@ -18,7 +17,6 @@
       <td>{{ attr[1] }}</td>
       <td>{{ attr[2] }}</td>
       <td>{{ attr[3] }}</td>
-      <td>{{ attr[4] }}</td>
     </tr>
     {% endfor %}
   </tbody>
