--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" href={{ url_for('static', filename='css/style.css') }}> 
   </head>  
   <body>
-    <header>
-      <h1>Library.{% block title %}{% endblock %}</h1> 
+    <header>     
+      
+      <h1><a href="/">Library</a>{% block title %}{% endblock %}</h1> 
       <div id="menu">
         <a href="/books">Books</a>
         <a href="/customers">Customers</a>
