--- a/client/templates/tables/book_table.html
+++ b/client/templates/tables/book_table.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}Books{% endblock %}
+{% block title %}.Books{% endblock %}
 {% block handler %}
 
 {% endblock %}
