--- a/client/templates/tables/currently_borrow_table.html
+++ b/client/templates/tables/currently_borrow_table.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}Borrows{% endblock %}
+{% block title %}.Borrows{% endblock %}
 {% block table %}
 <table>
   <thead>
