--- a/client/templates/tables/customer_table.html
+++ b/client/templates/tables/customer_table.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}Customers{% endblock %}
+{% block title %}.Customers{% endblock %}
 {% block handler %}
 <div class="handler-cell">
   <h3>Search</h3>
