--- a/client/templates/tables/staff_table.html
+++ b/client/templates/tables/staff_table.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}Staff{% endblock %}
+{% block title %}.Staff{% endblock %}
 {% block table %}
 <table>
   <thead>
