--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -43,7 +43,6 @@ a{
 }
 
 #handler-div {
-  padding: 10px;
   width: 100%;
   grid-column-start: 1;
   grid-column-end: 3;
@@ -52,14 +51,10 @@ a{
 }
 
 .handler-cell{
+  padding: 10px;
   width: 100%;
   border-bottom-style: dashed;
   border-bottom-width: 2px;
-}
-
-.form-table > tr {
-  background-color: red;
-  border-style: solid;
 }
 
 #table-div {
@@ -71,15 +66,26 @@ a{
   border-top-style: solid;
 }
 
+#table-div > table > tbody > tr > td {
+  border-right-style: solid;
+  border-width: 2px;
+}
 #table-div > table > thead > tr > th {
   position: sticky;
   top: 0px;
   background-color: white;
+  border-right-style: solid;
+  border-width: 2px;
 }
 
 #table-div > table > tbody > tr:nth-child(even) {
   background-color: #d0d0d0;
 }
+
+#table-div > table > tbody > tr:nth-child(odd) {
+  background-color: white;
+}
+
 
 #table-div > table {
   width: 100%;
