Add, remove and search customers, staff and books

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -9,10 +9,10 @@
       
       <h1><a href="/">Library</a>{% block title %}{% endblock %}</h1> 
       <div id="menu">
-        <a href="/books">Books</a>
-        <a href="/customers">Customers</a>
-        <a href="/staff">Staff</a>
-        <a href="/borrows">Borrows</a>
+        | <a href="/books">Books</a> | 
+        <a href="/customers">Customers</a> | 
+        <a href="/staff">Staff</a> | 
+        <a href="/borrows">Borrows</a> | 
       </div>
 
     </header>
