--- a/client/templates/pages/customers.html
+++ b/client/templates/pages/customers.html
@@ -6,7 +6,7 @@
 <div class="handler-cell">
   <h3>Search</h3>
   <form method="post" action="/customers/search">
-    <input type="text" name="txt-search-cid">
+    <input type="text" name="txt-search">
     <input type="submit" name="bth-search" value="Search">
   </form>
 </div>
@@ -14,11 +14,7 @@
   <h3>Add New Customer</h3>
   <form method="post" action="/customers/add">
     <table class="form-table">
-      <tr>
-        <td style="text-align: right;">CID:</td>
-        <td><input type="text" name="txt-cid"></td>
-      </tr>
-      <tr>
+     <tr>
         <td style="text-align: right;">First Name:</td>
         <td><input type="text" name="txt-fname"></td>
       </tr>
@@ -40,9 +36,9 @@
 </div>
 <div class="handler-cell">
   <h3>Remove Customer</h3>
-  <input type="text" name="remove-cid">
-  <input type="button" name="btn-remove" value="Remove">
-  <form>
+  <form method="post" action="/customers/remove">
+    <input type="text" name="txt-cid">
+    <input type="submit" name="btn-remove" value="Remove">
   </form>  
 </div>
 {% endblock %}
