basic error msg

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -13,6 +13,7 @@
         <a href="/customers">Customers</a> | 
         <a href="/staff">Staff</a> | 
         <a href="/borrows">Borrows</a> | 
+        {% block error_txt %}{% endblock %}
       </div>
 
     </header>
