--- a/client/templates/pages/staff.html
+++ b/client/templates/pages/staff.html
@@ -33,18 +33,11 @@
     <input type="submit" name="btn-add" value="Add">
   </form>  
 </div>
-<div class="handler-cell">
-  <h3>Remove Staff</h3>
-  <form method="post" action="/staff/remove">
-    <input type="text" name="txt-sid">
-    <input type="submit" name="btn-remove" value="Remove">
-  </form>  
-</div>
 {% endblock %}
 
 {% block error_txt %}
 {% if error_txt %}
-  <p class="error-txt">{{ error_txt }}</p>
+  <span class="error-txt">{{ error_txt }}</span>
 {% endif %}
 {% endblock %}
 
