--- a/client/templates/pages/customers.html
+++ b/client/templates/pages/customers.html
@@ -34,15 +34,13 @@
     <input type="submit" name="btn-add" value="Add">
   </form>  
 </div>
-<div class="handler-cell">
-  <h3>Remove Customer</h3>
-  <form method="post" action="/customers/remove">
-    <input type="text" name="txt-cid">
-    <input type="submit" name="btn-remove" value="Remove">
-  </form>  
-</div>
 {% endblock %}
 
+{% block error_txt %}
+{% if error_txt %}
+  <span class="error-txt">{{ error_txt }}</span>
+{% endif %}
+{% endblock %}
 
 {% block table %}
 <table>
